team page update

--- a/team.html
+++ b/team.html
@@ -306,9 +306,9 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
-                                    <li><a href="team.html"> Team </a></li>
+                                    <li><a href="team"> Team </a></li>
                                 </ul>
                             </div>
                         </div>
@@ -338,7 +338,7 @@
                                     <img src="assets/img/team/Ahmad.png" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Ahmad</a></h6>
+                                    <h6><a href="team-details">Mr. Ahmad</a></h6>
                                     <p>Founder & CEO</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -369,7 +369,7 @@
                                     <img src="assets/img/team/tahir.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Tahir</a></h6>
+                                    <h6><a href="team-details">Mr. Tahir</a></h6>
                                     <p>Co-Founder</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -400,7 +400,7 @@
                                     <img src="assets/img/team/Butt.jpeg" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Nadeem Butt</a></h6>
+                                    <h6><a href="team-details">Mr. Nadeem Butt</a></h6>
                                     <p>Mobile Application</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -430,7 +430,7 @@
                                     <img src="assets/img/team/Abdul Rahman.png" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Abdul Rahman</a></h6>
+                                    <h6><a href="team-details">Mr. Abdul Rahman</a></h6>
                                     <p>React Js (UI/UX Designer)</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -461,7 +461,7 @@
                                     <img src="assets/img/team/awaisoffice.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Awais</a></h6>
+                                    <h6><a href="team-details">Mr. Awais</a></h6>
                                     <p>Laravel Developer</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -492,7 +492,7 @@
                                     <img src="assets/img/team/hamid.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Hamid Raza</a></h6>
+                                    <h6><a href="team-details">Mr. Hamid Raza</a></h6>
                                     <p>Web Development</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -522,7 +522,7 @@
                                     <img src="assets/img/team/saif.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Saif Rahman</a></h6>
+                                    <h6><a href="team-details">Mr. Saif Rahman</a></h6>
                                     <p>Digital Marketing</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -552,7 +552,7 @@
                                     <img src="assets/img/team/awaisraza.jpg" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Awais</a></h6>
+                                    <h6><a href="team-details">Mr. Awais</a></h6>
                                     <p>Search Engine Optimization</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -706,7 +706,7 @@
                                     <img src="assets/img/team/saif-content.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Saif</a></h6>
+                                    <h6><a href="team-details">Mr. Saif</a></h6>
                                     <p>Content Creator</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -737,7 +737,7 @@
                                     <img src="assets/img/service/Mr-Saim.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Saim</a></h6>
+                                    <h6><a href="team-details">Mr. Saim</a></h6>
                                     <p>Worldpress Developer</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -767,7 +767,7 @@
                                     <img src="assets/img/service/Waleed.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Waleed</a></h6>
+                                    <h6><a href="team-details">Mr. Waleed</a></h6>
                                     <p>IT Specialist</p>
                                 </div>
                                 <div class="team__member__icon">
