--- a/team-details.html
+++ b/team-details.html
@@ -38,7 +38,7 @@
     <div id="back__preloader">
         <div id="back__circle_loader"></div>
         <div class="back__loader_logo">
-            <img loading="lazy" src="assets/img/logo/half logo.svg" alt="Preload">
+            <img loading="lazy" src="assets/img/logo/icon.svg" alt="Preload">
         </div>
     </div>
     <!-- pre loader area end -->
