--- a/team.html
+++ b/team.html
@@ -308,7 +308,7 @@
                                 <ul>
                                     <li><a href="/">Home</a></li>
                                     <li>// </li>
-                                    <li><a href="team"> Team </a></li>
+                                    <li>Team</li>
                                 </ul>
                             </div>
                         </div>
@@ -792,7 +792,7 @@
 
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="team__details__button text-center">
-                            <a class="default__button btn__black" href="contact.html">JOIN WITH US</a>
+                            <a class="default__button btn__black" href="contact">JOIN WITH US</a>
                         </div>
                     </div>
                 </div>
@@ -822,7 +822,7 @@
                                     incididunt ut labore.</p>
                             </div>
                             <div class="section__title__button">
-                                <a class="default__button" href="#">VIEW ARCHIVE POST</a>
+                                <a class="default__button" href="project">VIEW ARCHIVE POST</a>
                             </div>
 
                         </div>
@@ -837,13 +837,13 @@
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="blog-details.html">What is UI/UX Design?</a></h6>
+                                <h6><a href="blog-details">What is UI/UX Design?</a></h6>
                             </div>
                             <div class="blog__4__text">
                                 <p>UI/UX design stands for User Interface (UI) and User Experience (UX) Design.</p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="blog-details.html">READ MORE</a>
+                                <a class="default__button btn__black" href="blog-details">READ MORE</a>
                             </div>
                         </div>
                     </div>
@@ -856,13 +856,13 @@
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="blog-details.html">What is Web Development?</a></h6>
+                                <h6><a href="blog-details">What is Web Development?</a></h6>
                             </div>
                             <div class="blog__4__text">
                                 <p>Web development is the process of creating and maintaining websites...</p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="blog-details.html">READ MORE</a>
+                                <a class="default__button btn__black" href="blog-details">READ MORE</a>
                             </div>
                         </div>
                     </div>
