--- a/blog.html
+++ b/blog.html
@@ -308,7 +308,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
                                     <li> Blog </li>
                                 </ul>
@@ -361,38 +361,38 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Strategic Planning
+                                            <a class="sidebar__common__input" href="blog-details">Strategic Planning
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Market Entry Strategy
+                                            <a class="sidebar__common__input" href="blog-details">Market Entry Strategy
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Business Process
+                                            <a class="sidebar__common__input" href="blog-details">Business Process
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Financial Restructuring
+                                            <a class="sidebar__common__input" href="blog-details">Financial Restructuring
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Cost Reduction Analysis
+                                            <a class="sidebar__common__input" href="blog-details">Cost Reduction Analysis
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Supply Chain Optimization
+                                            <a class="sidebar__common__input" href="blog-details">Supply Chain Optimization
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -410,7 +410,7 @@
                                 <div class="sidebar__post">
                                     <ul>
                                         <li>
-                                            <a href="#">
+                                            <a href="blog-details">
                                                 <div class="sidebar__post__img">
                                                     <img src="assets/img/blog/blog__small__1.png" alt="">
                                                 </div>
@@ -422,7 +422,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="#">
+                                            <a href="blog-details">
                                                 <div class="sidebar__post__img">
                                                     <img src="assets/img/blog/blog__small__2.png" alt="">
                                                 </div>
@@ -435,7 +435,7 @@
 
 
                                         <li>
-                                            <a href="#">
+                                            <a href="blog-details">
                                                 <div class="sidebar__post__img">
                                                     <img src="assets/img/blog/blog__small__3.png" alt="">
                                                 </div>
@@ -458,38 +458,38 @@
                                 <div class="sidebar__tag">
                                     <ul>
                                         <li>
-                                            <a class="common__gradient__bg active" href="#">
+                                            <a class="common__gradient__bg active" href="blog-details">
                                                 <span>Management</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="blog-details">
                                                 <span>Consulting</span>
                                             </a>
                                         </li>
 
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="blog-details">
                                                 <span>Start-up</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="blog-details">
                                                 <span>Marketing</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="blog-details">
                                                 <span>Operation</span>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="common__gradient__bg " href="#">
+                                            <a class="common__gradient__bg " href="blog-details">
                                                 <span>HR Management</span>
                                             </a>
                                         </li>
@@ -536,7 +536,7 @@
                                         <p class="bg__white"><span class="text__gradient ">10 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="blog-details.html">A BEGINNER 'S GUIDE...</a></h6>
+                                        <h6><a href="blog-details">A BEGINNER 'S GUIDE...</a></h6>
                                     </div>
                                     <div class="blog__4__text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -559,7 +559,7 @@
                                         <p class="bg__white"><span class="text__gradient ">11 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="blog-details.html">A BEGINNER 'S GUIDE...</a></h6>
+                                        <h6><a href="blog-details">A BEGINNER 'S GUIDE...</a></h6>
                                     </div>
                                     <div class="blog__4__text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -626,7 +626,7 @@
                                         <p class="bg__white"><span class="text__gradient ">20 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="blog-details.html">A BEGINNER 'S GUIDE...</a></h6>
+                                        <h6><a href="blog-details">A BEGINNER 'S GUIDE...</a></h6>
                                     </div>
                                     <div class="blog__4__text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
