--- a/team-details.html
+++ b/team-details.html
@@ -307,7 +307,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index">Home</a></li>
                                     <li>// </li>
                                     <li> Team Details </li>
                                 </ul>
@@ -373,7 +373,7 @@
                                 </div>
                                 <div class="team__details__project__manager__number">
                                     <div class="team__details__project__icon">
-                                        <a href="#">
+                                        <a href="javascript:void(0)">
                                             <svg width="22" height="22" viewBox="0 0 22 22" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <g clip-path="url(#clip0_1501_3494)">
@@ -422,7 +422,7 @@
                                     </div>
 
                                     <div class="team__details__project__icon">
-                                        <a href="#">
+                                        <a href="javascript:void(0)">
                                             <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <g clip-path="url(#clip0_1501_3467)">
@@ -563,7 +563,7 @@
                                         </div>
                                         <div class="service__content">
                                             <div class="service__heading">
-                                                <h5><a href="service-details.html">Web Development</a></h5>
+                                                <h5><a href="service-details">Web Development</a></h5>
                                             </div>
                                             <div class="service__text">
                                                 <p>Transform your ideas into powerful, responsive websites with expert
@@ -615,7 +615,7 @@
                                         </div>
                                         <div class="service__content">
                                             <div class="service__heading">
-                                                <h5><a href="service-details.html">Mobile App Development</a></h5>
+                                                <h5><a href="service-details">Mobile App Development</a></h5>
                                             </div>
                                             <div class="service__text">
                                                 <p>Mobile app development tailored for your business needs, ensuring
@@ -667,7 +667,7 @@
                                         </div>
                                         <div class="service__content">
                                             <div class="service__heading">
-                                                <h5><a href="service-details.html">Software Development</a></h5>
+                                                <h5><a href="service-details">Software Development</a></h5>
                                             </div>
                                             <div class="service__text">
                                                 <p>Software development that turns ideas into robust solutions, ensuring
@@ -719,7 +719,7 @@
                                         </div>
                                         <div class="service__content">
                                             <div class="service__heading">
-                                                <h5><a href="service-details.html">Game Development</a></h5>
+                                                <h5><a href="service-details">Game Development</a></h5>
                                             </div>
                                             <div class="service__text">
                                                 <p>Game development that brings your imagination to life with stunning
@@ -771,7 +771,7 @@
                                         </div>
                                         <div class="service__content">
                                             <div class="service__heading">
-                                                <h5><a href="service-details.html">IT Specialist</a></h5>
+                                                <h5><a href="service-details">IT Specialist</a></h5>
                                             </div>
                                             <div class="service__text">
                                                 <p>Expert network and server management support with cybersecurity,
@@ -823,7 +823,7 @@
                                         </div>
                                         <div class="service__content">
                                             <div class="service__heading">
-                                                <h5><a href="service-details.html">UI/UX Design</a></h5>
+                                                <h5><a href="service-details">UI/UX Design</a></h5>
                                             </div>
                                             <div class="service__text">
                                                 <p>Creating intuitive UI/UX designs that blend aesthetics and
@@ -874,7 +874,7 @@
                                         </div>
                                         <div class="service__content">
                                             <div class="service__heading">
-                                                <h5><a href="service-details.html">Marketing Manager</a></h5>
+                                                <h5><a href="service-details">Marketing Manager</a></h5>
                                             </div>
                                             <div class="service__text">
                                                 <p>Dynamic Marketing Manager driving growth and innovation with tailored
@@ -925,7 +925,7 @@
                                         </div>
                                         <div class="service__content">
                                             <div class="service__heading">
-                                                <h5><a href="service-details.html">WordPress Development</a></h5>
+                                                <h5><a href="service-details">WordPress Development</a></h5>
                                             </div>
                                             <div class="service__text">
                                                 <p>WordPress Development Experts Crafting Custom Solutions to Elevate
@@ -976,7 +976,7 @@
                                         </div>
                                         <div class="service__content">
                                             <div class="service__heading">
-                                                <h5><a href="service-details.html">SEO Specialist</a></h5>
+                                                <h5><a href="service-details">SEO Specialist</a></h5>
                                             </div>
                                             <div class="service__text">
                                                 <p>Expert SEO Specialist Elevating Your Business with Tailored
