--- a/contact.html
+++ b/contact.html
@@ -312,7 +312,7 @@
                                 </div>
                                 <div class="breadcrumbarea__inner">
                                     <ul>
-                                        <li><a href="index">Home</a></li>
+                                        <li><a href="/">Home</a></li>
                                         <li>// </li>
                                         <li> Contact Us </li>
                                     </ul>
