--- a/blog-details.html
+++ b/blog-details.html
@@ -309,9 +309,9 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
-                                    <li> About us </li>
+                                    <li> Blog Details</li>
                                 </ul>
                             </div>
                         </div>
