--- a/service-details.html
+++ b/service-details.html
@@ -307,9 +307,9 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
-                                    <li> About us </li>
+                                    <li> Service Details </li>
                                 </ul>
                             </div>
                         </div>
@@ -348,8 +348,8 @@
                                 </div>
 
                             </div>
-
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1800">
+                            <div class="sidebar__widget aos-init aos-animate" data-aos="fade-up"
+                                data-aos-duration="1800">
 
                                 <div class="sidebar__title">
                                     <h5>All Services:</h5>
@@ -357,38 +357,60 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Strategic Planning
+                                            <a class="sidebar__common__input" href="web-development-services">Web
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Market Entry Strategy
+                                            <a class="sidebar__common__input"
+                                                href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Business Process optimization
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App
+                                                Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Financial Restructuring
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital
+                                                Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Cost Reduction Analysis
+                                            <a class="sidebar__common__input"
+                                                href="wordpress-development-services">WordPress
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Supply Chain Optimization
+                                            <a class="sidebar__common__input" href="ui-ux-design">UI/UX Design
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="game-development-services">Game
+                                                Development
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="seo-services">SEO Specialist
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="network-services">IT Specialist
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -492,7 +514,7 @@
                                     pulvinar.</p>
                             </div>
                             <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
-                                <a class="default__button" href="#">GET A FREE QUOTE</a>
+                                <a class="default__button" href="request-quote">GET A FREE QUOTE</a>
                             </div>
                         </div>
                     </div>
@@ -523,30 +545,21 @@
         <div class="footer__3 position-relative sp_top_200 bg__black">
 
             <!-- brand__start -->
-            <div class="brand__4 brand__3 " data-aos="fade-up" data-aos-duration="1500">
+            <div class="brand__4 brand__3 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
                 <div class="container">
 
                     <div class="brand__inner brand__inner--2">
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand_crunch_base.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
+                            <img src="assets/img/logo/footer_brand_trust.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand_design_crunch.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand1.webp" alt="">
                         </div>
                     </div>
                 </div>
