--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@
                                         <div class="row align-items-center">
                                             <div class="col-xl-6 col-lg-6  col-md-6 col-sm-6 col-12">
                                                 <div class="project__bottom__button">
-                                                    <a class="default__button" href="javascript:void(0);">VIEW OTHER
+                                                    <a class="default__button" href="project">VIEW OTHER
                                                         PROJECT</a>
                                                 </div>
                                             </div>
