--- a/index.html
+++ b/index.html
@@ -380,11 +380,12 @@
                                         data-aos-duration="1500">
                                         <div class="herobanner__content__wrapper">
                                             <div class="herobanner__title">
-                                                <h1>WE ARE CONSULTING AGENCY</h1>
+                                                <h1>We are a Software Development Company.</h1>
                                             </div>
                                             <div class="herobanner__text">
-                                                <p>Sagittis purus amet volutpat consequat mauris nunc congue nisi and
-                                                    tortor.</p>
+                                                <p>Trusted by Leading Companies across the World. Trusted by 200+ happy
+                                                    clients , across North America, Europe, Asia and Africa , ranging
+                                                    from startups to Fortune 500 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
                                                 <a class="default__button" href="javascript:void(0);">OUR ALL
@@ -406,11 +407,15 @@
                                         data-aos-duration="1500">
                                         <div class="herobanner__content__wrapper">
                                             <div class="herobanner__title">
-                                                <h1>WE ARE CONSULTING AGENCY</h1>
+                                                <h1>We are a Software Development Company.</h1>
                                             </div>
                                             <div class="herobanner__text">
-                                                <p>Sagittis purus amet volutpat consequat mauris nunc congue nisi and
-                                                    tortor.</p>
+                                                <p>
+                                                    Trusted by Leading Companies across the World. Trusted by 200+ happy
+                                                    clients , across North America, Europe, Asia and Africa , ranging
+                                                    from startups to Fortune 500 companies .
+
+                                                </p>
                                             </div>
                                             <div class="herobanner__button">
                                                 <a class="default__button" href="javascript:void(0);">OUR ALL
